<resources>
    <string name="app_name">My contacts</string>
    <integer name="com_vk_sdk_AppId">5429657</integer>
    <string name="showMsg">Показать сообщение</string>

    <string name="call_text">Позвонить</string>
    <string name="view_text">Инфо</string>
    <string name="sms_text">Написать смс</string>

    <string name="del_text">Удалить</string>
    <string name="add_text">Добавить</string>
    <string name="edit_text">Изменить</string>

</resources>
